--- a/src/app/core/components/show-counter/show-counter.component.html
+++ b/src/app/core/components/show-counter/show-counter.component.html
@@ -1,3 +1,4 @@
-<h1>Valore del Contatore : <span class="badge bg-secondary">{{ myCounter.getCounter() }}</span></h1>
-<h4 class="text-decoration-underline" *ngIf="myCounter.getError()">Valore immesso non valido: non sono ammessi valori negativi!</h4>
+<h1>Valore del Contatore : <span class="badge bg-secondary">{{ myCounter }}</span></h1>
+<h4 class="text-decoration-underline" *ngIf="myError">Valore immesso non valido: non sono ammessi valori negativi!</h4>
+{{myError}}
 
